# CPPassignment2

./: BadTwitter.cpp  BadTwitter.h  CMakeLists.txt  CMake_Assignment2.cpp  README.md
BadTwitter/: BadTwitter.cpp  CMakeLists.txt
BadTwitter/Files/: users.txt
BadTwitter/junkFiles/: ReadTweets.cpp
BadTwitter/src/: Person.cpp  User.h
CMake_Assignment2/: CMakeLists.txt  CMake_Assignment2.h
Files/: blacklist.txt  example_tweets.txt  users.txt
junkFiles/: ReadTweets.h
src/: Application.h  FileHandler.cpp  FileHandler.h  IteratorForTweets.h  Manager.cpp  Manager.h  Person.cpp  Person.h  ReadTweets.cpp  ReadTweets.h  User.cpp  User.h
src/Interface/: LoginOptions.cpp  LoginOptions.h  ManagerOptions.cpp  ManagerOptions.h  UserOptions.cpp  UserOptions.h
util/: LineCounter.h  MovingAverage.h  base.h  inputSanitise.cpp  inputSanitiser.h  vBlacklist.cpp  vBlacklist.h  vFile.cpp  vFile.h
